# ballconditionedtransformers

./: .gitignore  CLAUDE.md  README.md  dataset_download.ipynb  pyproject.toml  requirements-colab.txt  requirements-detect.txt  requirements.txt
configs/: soccernet_ballcond.yaml  soccernet_exp_ball_broadcast.yaml  soccernet_exp_ball_symmetric.yaml  soccernet_exp_entity.yaml  soccernet_exp_entity_ball_joint.yaml  soccernet_exp_entity_ball_symmetric.yaml  soccernet_exp_no_ball.yaml  soccernet_symmetric.yaml  sportsmot_ballcond.yaml  sportsmot_symmetric.yaml  synthetic_ballcond.yaml  synthetic_entity.yaml  synthetic_kalman.yaml  synthetic_lstm.yaml  synthetic_symmetric.yaml
notebooks/: colab_atharv.ipynb  colab_heatmap_tracker.ipynb  colab_player_detect.ipynb  colab_quickstart.ipynb  local_atharv.ipynb
results/sportsmot_symmetric/: config.yaml  metrics.json
scripts/: make_qualitative_detection_figure.py  plot_heatmap_tracker_history.py  run_synthetic_sweep.sh  setup_soccernet_yolo_local.py
src/ballcond/: __init__.py  metrics.py  train.py  utils.py
src/ballcond/data/: __init__.py  soccernet.py  sportsmot.py  synthetic.py  types.py  windows.py
src/ballcond/models/: __init__.py  blocks.py  kalman.py  lstm.py  (+4 more)
src/soccernet_detect/: __init__.py  direct_dataset.py  eval_heatmap_tracker.py  export_yolo.py  heatmap_model.py  nc_tracking_download.py  simple_tracker.py  train_heatmap_tracker.py  train_yolo.py  visualize_heatmap_predictions.py
tests/: test_export_yolo.py  test_heatmap_tracker.py  test_smoke.py  test_soccernet_gameinfo.py  test_soccernet_predict.py
